# caca-onca

./: .gitignore  README.md  pyproject.toml  rodar_caca_onca.bat
src/caca_onca/: __init__.py
src/caca_onca/app/: main.py
src/caca_onca/connection/: connection_db.py  queries.py
src/caca_onca/service/: consultar.py
src/caca_onca/use_cases/: get_pedidos.py
