[project]
name = "caca-onca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jef-loppes-reis", email = "jefersondip25@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ecomm-postgres",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
ecomm-postgres = { git = "https://github.com/E-commerce-Pecista/ecomm-postgres" }
